sort both alignment issue fix

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -179,23 +179,28 @@ table.dataTable thead .sorting_desc_disabled {
 
 
 table.dataTable thead .sorting:after {
-	content: url("../images/sort_both.png") !important;
+	content: url("../images/sort_both.png?v=1") !important;
+	margin-left: 2px !important;
 }
 
 table.dataTable thead .sorting_asc:after {
-	content: url("../images/sort_asc.png") !important;
+	content: url("../images/sort_asc.png?v=1") !important;
+	margin-left: 2px !important;
 }
 
 table.dataTable thead .sorting_desc:after {
-	content: url("../images/sort_desc.png") !important;
+	content: url("../images/sort_desc.png?v=1") !important;
+	margin-left: 2px !important;
 }
 
 table.dataTable thead .sorting_asc_disabled:after {
-	content: url("../images/sort_asc_disabled.png") !important;
+	content: url("../images/sort_asc_disabled.png?v=1") !important;
+	margin-left: 2px !important;
 }
 
 table.dataTable thead .sorting_desc_disabled:after {
-	content: url("../images/sort_desc_disabled.png") !important;
+	content: url("../images/sort_desc_disabled.png?v=1") !important;
+	margin-left: 2px !important;
 }
 
 
